--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link rel="shortcut icon" type="image/x-icon" href="./assets/favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Emilys+Candy&family=Inter:wght@400;700&display=swap" rel="stylesheet">
-
   <link rel="stylesheet" href="style.css">
+
   <title>Jornada do zero a primeira vaga</title>
+  
 </head>
 <body>
   <div id="container">
